--- a/app/src/main/res/layout/fragment_roteirista_entrega_nova.xml
+++ b/app/src/main/res/layout/fragment_roteirista_entrega_nova.xml
@@ -1,39 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="16dp">
 
-    <androidx.cardview.widget.CardView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="20dp">
+        android:layout_alignParentTop="true"
+        android:fillViewport="true">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="16dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
                     android:text="@string/nota"
                     android:textColor="@android:color/black"
                     android:textSize="18sp" />
 
                 <Spinner
                     android:id="@+id/notaSpinner"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="35dp" />
 
                 <TextView
@@ -46,11 +45,9 @@
 
                 <Spinner
                     android:id="@+id/motoristaSpinner"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="35dp"
-                    android:layout_marginTop="5dp"
-                    android:ems="10"
-                    android:textSize="14sp" />
+                    android:layout_marginTop="5dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -62,12 +59,12 @@
 
                 <EditText
                     android:id="@+id/dataEditText"
+                    style="@style/EditTextTheme"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="24dp"
                     android:layout_marginRight="24dp"
-                    android:background="@drawable/background_edit_text"
                     android:ems="10"
                     android:inputType="date" />
 
@@ -81,40 +78,43 @@
 
                 <EditText
                     android:id="@+id/horaEditText"
+                    style="@style/EditTextTheme"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/background_edit_text"
                     android:ems="10"
                     android:inputType="time" />
             </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </ScrollView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:gravity="center"
-                android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/limparButton"
-                    android:layout_width="145dp"
-                    android:layout_height="35dp"
-                    android:layout_marginRight="24dp"
-                    android:background="@drawable/background_button"
-                    android:text="@string/limpar"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="5dp">
 
-                <Button
-                    android:id="@+id/salvarButton"
-                    android:layout_width="145dp"
-                    android:layout_height="35dp"
-                    android:background="@drawable/background_button"
-                    android:text="@string/salvar"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+        <Button
+            android:id="@+id/limparButton"
+            style="@style/ButtonTheme"
+            android:layout_width="145dp"
+            android:layout_height="35dp"
+            android:layout_marginRight="24dp"
+            android:text="@string/limpar" />
+
+        <Button
+            android:id="@+id/salvarButton"
+            style="@style/ButtonTheme"
+            android:layout_width="145dp"
+            android:layout_height="35dp"
+            android:text="@string/salvar" />
+    </LinearLayout>
+</RelativeLayout>
