--- a/app/src/main/res/layout/adapter_entrega.xml
+++ b/app/src/main/res/layout/adapter_entrega.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:layout_marginBottom="8dp"
     android:background="@android:color/white"
     android:orientation="horizontal"
     android:padding="16dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
@@ -19,6 +19,24 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:text="@string/nota"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/destinatarioTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="@string/destinatario"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/enderecoTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/endereco"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
@@ -32,45 +50,30 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/coletarTextView"
+            android:id="@+id/dataEntregarTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/saida"
+            android:text="@string/data_entrega"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/emissaoTextView"
+            android:id="@+id/horarioEntregarTextView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="bottom"
-            android:text="@string/chegada"
+            android:layout_height="wrap_content"
+            android:text="@string/hora_entrega"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
     </LinearLayout>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/statusTextView"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/statusTextView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/status"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-    </LinearLayout>
+        android:text="@string/status"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 </LinearLayout>
