--- a/app/src/main/res/layout/fragment_roteirista_coletas_lista.xml
+++ b/app/src/main/res/layout/fragment_roteirista_coletas_lista.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_search"
-        android:queryHint="Pesquise pelo número da nota" />
+        android:queryHint="Pesquise pelo número da coleta" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,13 +40,14 @@
         android:id="@+id/totalTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:gravity="end" />
 
     <TextView
         android:id="@+id/statusPesquisaTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="Carregando coletas..." />
 
