--- a/app/src/main/res/layout/fragment_roteirista_notas_cadastradas.xml
+++ b/app/src/main/res/layout/fragment_roteirista_notas_cadastradas.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="@dimen/activity_horizontal_margin"
     tools:context=".view.roteirista.ui.notas.RoteiristaNotasCadastradasFragment">
 
     <SearchView
@@ -16,10 +17,19 @@
         android:queryHint="Pesquise pelo número da nota" />
 
     <TextView
+        android:id="@+id/totalTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="end" />
+
+    <TextView
         android:id="@+id/statusNotasTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center" />
+        android:gravity="center"
+        android:text="Carregando notas..." />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notasRecyclerView"
