--- a/app/src/main/res/layout/fragment_motorista_entregas_realizadas.xml
+++ b/app/src/main/res/layout/fragment_motorista_entregas_realizadas.xml
@@ -5,12 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".view.motorista.ui.entregas.MotoristaEntregasRealizadasFragment">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="ENTREGAS REALIZADAS" />
+    tools:context=".view.motorista.ui.entrega.MotoristaEntregasRealizadasFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/entregasRealizadasRecyclerView"
