--- a/app/src/main/res/layout/fragment_roteirista_coletas_lista.xml
+++ b/app/src/main/res/layout/fragment_roteirista_coletas_lista.xml
@@ -37,7 +37,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/totalTextView"
+        android:id="@+id/totalEncontradoTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
