--- a/app/src/main/res/layout/fragment_roteirista_notas_cadastradas.xml
+++ b/app/src/main/res/layout/fragment_roteirista_notas_cadastradas.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_horizontal_margin"
-    tools:context=".view.roteirista.ui.notas.RoteiristaNotasCadastradasFragment">
+    tools:context=".view.roteirista.ui.nota.RoteiristaNotasCadastradasFragment">
 
     <SearchView
         android:id="@+id/searchView"
