--- a/app/src/main/res/layout/fragment_adm_funcionario_novo.xml
+++ b/app/src/main/res/layout/fragment_adm_funcionario_novo.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
@@ -85,8 +84,6 @@
                     android:id="@+id/dataNascimentoTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
-
                     android:layout_marginTop="24dp"
                     android:text="@string/data_nascimento"
                     android:textColor="@android:color/black"
@@ -100,7 +97,6 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginRight="16dp"
-                    android:digits="0123456789"
                     android:ems="10"
                     android:inputType="date" />
 
@@ -123,26 +119,6 @@
                     android:layout_marginRight="16dp"
                     android:ems="10"
                     android:inputType="textPersonName" />
-
-                <TextView
-                    android:id="@+id/emailTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:text="@string/email"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-
-                <EditText
-                    android:id="@+id/emailEditText"
-                    style="@style/EditTextTheme"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
-                    android:ems="10"
-                    android:inputType="textEmailAddress" />
 
                 <TextView
                     android:id="@+id/celularTextView"
@@ -180,13 +156,33 @@
                 <EditText
                     android:id="@+id/telefoneEditText"
                     style="@style/EditTextTheme"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginRight="16dp"
                     android:ems="10"
                     android:inputType="numberSigned" />
+
+                <TextView
+                    android:id="@+id/emailTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:text="@string/email"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/emailEditText"
+                    style="@style/EditTextTheme"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:ems="10"
+                    android:inputType="textEmailAddress" />
 
                 <TextView
                     android:id="@+id/cargoTextView"
@@ -203,25 +199,33 @@
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
-                    android:visibility="visible" />
-
+                    android:layout_marginRight="16dp" />
             </LinearLayout>
 
-            <!-- Informações - funcionário motorista -->
+            <!-- Informações - CNH -->
             <LinearLayout
                 android:id="@+id/motoristaLinearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/background_linear"
                 android:orientation="vertical"
+                android:padding="8dp"
                 android:visibility="visible">
 
                 <TextView
-                    android:id="@+id/textViewCNH"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/cnh"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:text="@string/cnh"
+                    android:text="Doc. Identidade"
                     android:textColor="@android:color/black"
                     android:textSize="18sp" />
 
@@ -235,7 +239,6 @@
                     android:inputType="numberSigned" />
 
                 <TextView
-                    android:id="@+id/categoriaTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
@@ -253,33 +256,15 @@
                     android:inputType="textCapCharacters" />
 
                 <TextView
-                    android:id="@+id/textViewVeiculo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:text="@string/veiculo"
+                    android:text="N° Registro"
                     android:textColor="@android:color/black"
                     android:textSize="18sp" />
 
                 <EditText
-                    android:id="@+id/veiculoEditText"
-                    style="@style/EditTextTheme"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_marginTop="5dp"
-                    android:ems="10"
-                    android:inputType="textPersonName" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:text="@string/ano"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-
-                <EditText
-                    android:id="@+id/anoEditText"
+                    android:id="@+id/nRegistroEditText"
                     style="@style/EditTextTheme"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
@@ -291,18 +276,35 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:text="@string/placa"
+                    android:text="@string/data_de_validade"
                     android:textColor="@android:color/black"
                     android:textSize="18sp" />
 
                 <EditText
-                    android:id="@+id/placaEditText"
+                    android:id="@+id/dataValidadeEditText"
                     style="@style/EditTextTheme"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
                     android:ems="10"
-                    android:inputType="textCapCharacters" />
+                    android:inputType="date" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:text="@string/data_de_emissao"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/dataEmissaoEdiText"
+                    style="@style/EditTextTheme"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="5dp"
+                    android:ems="10"
+                    android:inputType="date" />
             </LinearLayout>
 
             <LinearLayout
@@ -327,7 +329,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:text="@string/salvar" />
-
             </LinearLayout>
 
         </LinearLayout>
