--- a/app/src/main/res/layout/fragment_motorista_coletas_realizadas.xml
+++ b/app/src/main/res/layout/fragment_motorista_coletas_realizadas.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".view.motorista.ui.coletas.MotoristaColetasRealizadasFragment">
+    tools:context=".view.motorista.ui.coleta.MotoristaColetasRealizadasFragment">
 
     <TextView
         android:layout_width="match_parent"
