--- a/app/src/main/res/layout/fragment_motorista_entregas_pendentes.xml
+++ b/app/src/main/res/layout/fragment_motorista_entregas_pendentes.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_horizontal_margin"
-    tools:context=".view.motorista.ui.entregas.MotoristaEntregasPendentesFragment">
+    tools:context=".view.motorista.ui.entrega.MotoristaEntregasPendentesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/entregasPendentesRecyclerView"
