--- a/app/src/main/res/layout/fragment_roteirista_entregas_lista.xml
+++ b/app/src/main/res/layout/fragment_roteirista_entregas_lista.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_horizontal_margin"
-    tools:context=".view.roteirista.ui.entregas.RoteiristaEntregasListaFragment">
+    tools:context=".view.roteirista.ui.entrega.RoteiristaEntregasListaFragment">
 
     <SearchView
         android:id="@+id/searchView"
