--- a/app/src/main/res/layout/fragment_veiculo_lista.xml
+++ b/app/src/main/res/layout/fragment_veiculo_lista.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".view.adm.ui.funcionario.FuncionariosCadastradosFragment">
+    android:padding="@dimen/activity_horizontal_margin"
+    tools:context=".view.adm.ui.veiculo.VeiculoListaFragment">
 
     <SearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_search"
-        android:queryHint="Digite o nome do funcionário" />
+        android:queryHint="Pesquise pela placa do carro" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,31 +27,32 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cargo: " />
+            android:text="Status: " />
 
         <Spinner
-            android:id="@+id/cargosSpinner"
+            android:id="@+id/statusSpinner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/totalTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="end" />
-
-    <TextView
-        android:id="@+id/statusFuncionariosTextView"
+        android:id="@+id/totalEncontradoTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="end" />
+
+    <TextView
+        android:id="@+id/statusPesquisaTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Carregando lista de funcionários..." />
+        android:text="Carregando veículos..." />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/funcionariosRecyclerView"
+        android:id="@+id/veiculosRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
