--- a/app/src/main/res/menu/activity_main_adm_drawer.xml
+++ b/app/src/main/res/menu/activity_main_adm_drawer.xml
@@ -20,6 +20,11 @@
             android:title="@string/coletas" />
 
         <item
+            android:id="@+id/nav_veiculos"
+            android:icon="@drawable/ic_people_24dp"
+            android:title="@string/veiculos" />
+
+        <item
             android:id="@+id/nav_funcionarios"
             android:icon="@drawable/ic_people_24dp"
             android:title="@string/funcionarios" />
