--- a/app/src/main/res/navigation/mobile_navigation_adm.xml
+++ b/app/src/main/res/navigation/mobile_navigation_adm.xml
@@ -7,32 +7,32 @@
 
     <fragment
         android:id="@+id/nav_entregas"
-        android:name="com.gutotech.tcclogistica.view.adm.ui.entregas.AdmEntregasFragment"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.entrega.AdmEntregasFragment"
         android:label="@string/entregas"
         tools:layout="@layout/fragment_adm_entregas" />
 
     <fragment
         android:id="@+id/nav_notas"
-        android:name="com.gutotech.tcclogistica.view.adm.ui.notas.AdmNotasFragment"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.nota.AdmNotasFragment"
         android:label="@string/notas"
         tools:layout="@layout/fragment_adm_notas" />
 
     <fragment
         android:id="@+id/nav_coletas"
-        android:name="com.gutotech.tcclogistica.view.adm.ui.coletas.AdmColetasFragment"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.coleta.AdmColetasFragment"
         android:label="@string/coletas"
         tools:layout="@layout/fragment_adm_coletas" />
 
     <fragment
         android:id="@+id/nav_funcionarios"
-        android:name="com.gutotech.tcclogistica.view.adm.ui.funcionarios.FuncionariosFragment"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.funcionario.FuncionariosFragment"
         android:label="@string/funcionarios"
         tools:layout="@layout/fragment_adm_funcionarios" />
 
     <fragment
         android:id="@+id/nav_meus_dados"
         android:name="com.gutotech.tcclogistica.view.PerfilFragment"
-        android:label="Meus Dados"
+        android:label="@string/meus_dados"
         tools:layout="@layout/fragment_perfil" />
 
     <fragment
@@ -40,4 +40,9 @@
         android:name="com.gutotech.tcclogistica.view.SupportFragment"
         android:label="@string/ajuda"
         tools:layout="@layout/fragment_suporte" />
+    <fragment
+        android:id="@+id/nav_veiculos"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.veiculo.VeiculosFragment"
+        android:label="@string/veiculos"
+        tools:layout="@layout/fragment_veiculos" />
 </navigation>
